# luma

./: .gitignore  Cargo.toml  LICENSE  README.md  linker.ld  powerpc-unknown-eabi.json
.cargo/: config.toml
.github/workflows/: rust.yml
luma_core/: Cargo.toml
luma_core/asm/: cache.S
luma_core/src/: allocate.rs  cache.rs  integer.rs  io.rs  ios.rs  ipc.rs  lib.rs  loadstore.rs  processor.rs  register.rs  sysconf.rs  vi.rs
luma_core/src/exi/: mod.rs  usb_gecko.rs
luma_core/src/irq/: consts.rs  mod.rs
luma_runtime/: Cargo.toml
luma_runtime/asm/: crt0.S  runtime.S  system.S
luma_runtime/src/: lib.rs
src/: lib.rs
